tests/NormalTests/paczka1/small_fuzzy/97462696.err
Error in line 12: Cmm3YGGV313 S488 68,5
Error in line 6: 5yh A966 14,8
